@@ -59,8 +59,8 @@ inner-jar: $(JAR_FILE)
 # has changed, as identified by the dirty jar stamp.
 
 $(JAR_FILE): $(MOD_DIRTY_JAR_STAMP_FILE)
-ifeq "$(MODULE_NAME)" ""
-	$(error Must define MODULE_NAME in Makefile)
+ifeq "$(PROJECT_NAME)" ""
+	$(error Must define PROJECT_NAME in Makefile)
 endif
 	$(call NOTE, Building $(JAR_FILE) ... )
 	$(JAR) cf $(JAR_FILE) -C $(MOD_CLASS_DIR) .
@@ -76,8 +76,8 @@ $(INSTALL_DIR)/$(JAR_FILE): $(JAR_FILE)
 ifeq "$(INSTALL_DIR)" ""
 	$(error Must define INSTALL_DIR in Makefile)
 endif
-ifeq "$(MODULE_NAME)" ""
-	$(error Must define MODULE_NAME in Makefile)
+ifeq "$(PROJECT_NAME)" ""
+	$(error Must define PROJECT_NAME in Makefile)
 endif
 	$(call NOTE, Installing $(JAR_FILE) to $(INSTALL_DIR))
 	@$(CP) $(CP_FORCE_OPT) $(JAR_FILE) $(INSTALL_DIR)
